@@ -1,3 +1,8 @@
+Sun  Aug 14 2005	H. Wade Minter (minter@lunenburg.org)
+     * Fix a bug where having Mr. Voice Online version check enabled without
+       a working internet connection would prevent the application from 
+       starting.  Reported by Tim in Richmond.
+
 Sun  Aug  7 2005	H. Wade Minter (minter@lunenburg.org)
      * Fix a bug where searching for a string with an apostrophe in it would
        cause an error.
